# src/routes.js
@@ -8,6 +8,7 @@ import handler from "./middlewares/handler.js";
 
 import AuthRouter from "./routers/auth/authRouter.js"
 import UserRouter from "./routers/user/userRouter.js"
+import BudgetRouter from "./routers/budget/budgetRouter.js"
 
 import { verify } from "./controllers/authController.js"
 
@@ -17,6 +18,7 @@ routes.use(handler);
 
 routes.use("/login", AuthRouter)
 routes.use("/usuarios", verify, UserRouter)
+routes.use("/orcamento",   BudgetRouter)//COLOCAR O VERIFY
 
 routes.use(InternalServerError)
 routes.use(NotFound);
